everything/gitops/apps/book/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book
  labels:
    app: book
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book
  template:
    metadata:
      labels:
        app: book
    spec:
      containers:
        - name: book
          image: registry.lab.i-tems.com/book:SEED
          ports:
            - containerPort: 3200
              name: http
          readinessProbe:
            httpGet:
              path: /docs
              port: 3200
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /docs
              port: 3200
            initialDelaySeconds: 15
            periodSeconds: 60
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: output
              mountPath: /app/output
      volumes:
        - name: output
          persistentVolumeClaim:
            claimName: book-output
