everything/gitops/apps/book/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book
  labels:
    app: book
spec:
  type: ClusterIP
  selector:
    app: book
  ports:
    - name: http
      port: 80
      targetPort: 3200
      protocol: TCP
