everything/gitops/apps/book/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book
spec:
  ingressClassName: traefik
  rules:
    - host: book.i-tems.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book
                port:
                  number: 80
